--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 !/Users/jkhta/Documents/Github/sar_qtl/figures/path_analysis_GridLMM/nam_GridLMM_kinship.RDS
 
 !nam_GridLMM_kinship.RDS
+!nam_rqtl_geno_prob_array_final_0.99_no_kinship.rds
