--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.RDS
+*.vcf
 !/Users/jkhta/Documents/Github/sar_qtl/figures/path_analysis_GridLMM/nam_GridLMM_kinship.RDS
 
 !nam_GridLMM_kinship.RDS
