Added gene annotation, path analysis variants of stepwise scripts, and heritability table scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.RDS
 *.vcf
+*.gff
 !/Users/jkhta/Documents/Github/sar_qtl/figures/path_analysis_GridLMM/nam_GridLMM_kinship.RDS
 
 !nam_GridLMM_kinship.RDS
