--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.RDS
 *.vcf
 *.gff
+*.csv
 !/Users/jkhta/Documents/Github/sar_qtl/figures/path_analysis_GridLMM/nam_GridLMM_kinship.RDS
 
 !nam_GridLMM_kinship.RDS
