--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.vcf
 *.gff
 *.csv
+*.txt
 !/Users/jkhta/Documents/Github/sar_qtl/figures/path_analysis_GridLMM/nam_GridLMM_kinship.RDS
 
 !nam_GridLMM_kinship.RDS
